# CGVCM_VisionComputacional

./: CMakeLists.txt  Image.cpp  Image.h  Image.h.autosave  Image.h.gGIhoc  Pixel.cpp  Pixel.h  README.md  RGB.cpp  RGB.h  main.cpp
